# ut

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: modules.yml  msvc.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake
include/ut/: ut.hpp
modules/: ut.ixx
src/: main.cpp
tests/: ut_module_consumer_tests.cpp  ut_run_tests.cpp
